--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "phoenix"
+description = "A simple, fast programming language"
 version = "0.1.1"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/TomtheCoder2/phoenix"
+readme = "README.md"
+keywords = ["phoenix", "programming", "language", "fast", "simple"]
+categories = ["development-tools", "embedded", "programming-languages"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
