--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "phoenix-lang"
 description = "A simple, fast programming language"
-version = "1.0.0"
+version = "1.0.1"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/TomtheCoder2/phoenix"
@@ -9,6 +9,7 @@ readme = "README.md"
 keywords = ["phoenix", "programming", "language", "fast", "simple"]
 categories = ["development-tools", "embedded", "programming-languages"]
 authors = ["TomtheCoder2 (Nautilus) <@TomtheCoder2>"]
+default-run = "phoenix"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -20,3 +21,5 @@ serde = { version = "1.0.26", features = ["derive"] }
 clap = { version = "4.2.1", features = ["derive"] }
 lz4-compression = "0.7.0"
 colored = "2"
+
+
