for loops are kinda slow, but python isnt really faster either, so im not gonna optimize them yet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0.26", features = ["derive"] }
 clap = { version = "4.2.1", features = ["derive"] }
 lz4-compression = "0.7.0"
 colored = "2"
+rand = "0.8.4"
 
 
 [features]
