--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build and test Phoenix
-        run: cargo build; cargo test
+        run: cargo build -r; cargo test
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ env.BINARY_NAME }}
