--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build and test Phoenix
         run: cargo build -r; cargo test
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
-          name: upload phoenix binary
+          name: Phoenix
           path: target/release/phoenix
